# 2d-pathtracer-rs

./: Cargo.toml  refrence.glsl
src/: main.rs  path_tracer.rs
