[package]
name = "pathtracer_2d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.21.3"
glam = { version = "0.23.0", features = ["std"] }
rand = "0.8.5"
rayon = "1.7.0"
tokio = {version = "1.27.0", features = ["full"] }
